Indexing block signatures. Add uptime and blocks to validators API.
