# cmd/api/handler/responses/validator.go
@@ -4,7 +4,10 @@
 package responses
 
 import (
+	"fmt"
+
 	"github.com/celenium-io/celestia-indexer/internal/storage"
+	"github.com/celenium-io/celestia-indexer/pkg/types"
 )
 
 type Validator struct {
@@ -61,4 +64,46 @@ func NewShortValidator(val storage.Validator) *ShortValidator {
 		ConsAddress: val.ConsAddress,
 		Moniker:     val.Moniker,
 	}
+}
+
+type ValidatorUptime struct {
+	Uptime string         `example:"0.97" json:"uptime" swaggertype:"string"`
+	Blocks []SignedBlocks `json:"blocks"`
+}
+
+type SignedBlocks struct {
+	Height types.Level `example:"100"  json:"height" swaggertype:"integer"`
+	Signed bool        `example:"true" json:"signed" swaggertype:"boolean"`
+}
+
+func NewValidatorUptime(levels []types.Level, currentLevel types.Level, count types.Level) (uptime ValidatorUptime) {
+	var (
+		levelIndex = 0
+		blockIndex = 0
+		threshold  = count
+	)
+
+	if threshold > currentLevel {
+		threshold = currentLevel
+	}
+
+	uptime.Blocks = make([]SignedBlocks, threshold)
+	for i := currentLevel; i > currentLevel-threshold; i-- {
+		if levelIndex < len(levels) && levels[levelIndex] == i {
+			levelIndex++
+			uptime.Blocks[blockIndex] = SignedBlocks{
+				Signed: true,
+				Height: i,
+			}
+		} else {
+			uptime.Blocks[blockIndex] = SignedBlocks{
+				Signed: false,
+				Height: i,
+			}
+		}
+		blockIndex++
+	}
+
+	uptime.Uptime = fmt.Sprintf("%.4f", float64(levelIndex)/float64(threshold))
+	return uptime
 }
