# pkg/types/block.go
@@ -30,7 +30,7 @@ type Block struct {
 	Header `json:"header"`
 	Data   `json:"data"`
 	// Evidence   types.EvidenceData `json:"evidence"`
-	// LastCommit *Commit `json:"last_commit"`
+	LastCommit *Commit `json:"last_commit"`
 }
 
 // Consensus captures the consensus rules for processing a block in the blockchain,
@@ -86,15 +86,9 @@ type Data struct {
 	SquareSize uint64 `json:"square_size,string"`
 }
 
-// Commit contains the evidence that a block was committed by a set of validators.
-// NOTE: Commit is empty for height 1, but never nil.
-// type Commit struct {
-// 	// NOTE: The signatures are in order of address to preserve the bonded
-// 	// ValidatorSet order.
-// 	// Any peer with a block can gossip signatures by index with a peer without
-// 	// recalculating the active ValidatorSet.
-// 	Height     int64             `json:"height,string"`
-// 	Round      int32             `json:"round"`
-// 	BlockID    BlockId           `json:"block_id"`
-// 	Signatures []types.CommitSig `json:"signatures"`
-// }
+type Commit struct {
+	Height     int64             `json:"height,string"`
+	Round      int32             `json:"round"`
+	BlockID    BlockId           `json:"block_id"`
+	Signatures []types.CommitSig `json:"signatures"`
+}
